2003-08-04 Damien Sandras  <dsandras@seconix.com>

	* src/pref_window.cpp: Removed unused callbacks.

	* src/tools.cpp: Added Close buttons to be HIG compliant to the 2
	history windows.
	
2003-08-01 Damien Sandras  <dsandras@seconix.com>

	* lib/dialog.c: No title in HIG compliant alert boxes.

	* src/main_window.cpp: Removed resize grip to the statusbar.
	
	* src/pref_window.cpp: Changed alignment for buttons inside the
	prefs window and realigned the main frame with the categories frame.

	* src/tools.cpp: Added 6 pixels border to the calls history notebook
	in the window of the same name.
	
2003-07-30 Damien Sandras  <dsandras@seconix.com>

	* src/ldap_window.cpp: Added back the S / A / V thing, it makes
	no sense without.
	
2003-07-30 Damien Sandras  <dsandras@seconix.com>

	* configure.in: Incremented version to 0.98.1.

	* src/main_window.cpp: Small fix.
	
	* src/menu.cpp: Changed wrong menu item.
	
	* src/misc.cpp: HIG fixes for the prefs window, tried 
	to respect spacing and alignment the best possible.
	
	* src/pref_window.cpp: Same here.
	
	* src/toolbar.cpp: Fixed tooltip.
	
	* src/tools.cpp: Removed frame.
	
2003-07-30 Damien Sandras  <dsandras@seconix.com>

	* src/chat_window.cpp: Removed clear button. Not really required.
	
	* src/endpoint.cpp: Changes relative to the changes to
	the remote user name.

	* src/main_window.cpp: Tried to be more respectful of HIG spacing 
	recommendations in all parts of the main window.
	
	* src/toolbar.cpp: Removed uneeded space in the vertical toolbar.
	
2003-07-29 Damien Sandras  <dsandras@seconix.com>

	* src/toolbar.cpp: Added tooltip to the connect button.
	
2003-07-21 Hasbullah Bin Pit <sebol@ikhlas.com>
	
        * configure.in: Added 'ms' (Malay) to ALL_LINGUAS.

2003-07-16  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: s/0xa0/ /g

2003-06-27 Damien Sandras  <dsandras@seconix.com>

	* src/config.cpp: Higher granularity for gdk_threads_enter/leave to
	prevent possible deadlocks.
	