@@ -1,5 +1,12 @@
 2003-08-04 Damien Sandras  <dsandras@seconix.com>
 
+	* src/menu.cpp: Fixed #118989.
+	
+	* src/tools.cpp: Converts the current date to UTF-8 before using it
+	in the calls history.
+	
+2003-08-04 Damien Sandras  <dsandras@seconix.com>
+
 	* src/pref_window.cpp: Removed unused callbacks.
 
 	* src/tools.cpp: Added Close buttons to be HIG compliant to the 2
